k8s/03-backend.yaml
# 3. BACKEND
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  # type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: backend
---
apiVersion: apps/apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: aungmyinmyintmyat/finance-backend:v2 # latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
